# protonmail-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs
src/imap/: imap_client.rs  mod.rs  types.rs
src/server/: mod.rs
tests/: http_transport.rs
